manifests/system/karpenter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: karpenter
spec: {}
status: {}
