manifests/system/karpenter/manifests.yaml
---
# Source: karpenter/templates/controller/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter-metrics
  namespace: karpenter
spec:
  ports:
    - port: 8080
      targetPort: metrics
  selector:
    karpenter: controller
---
# Source: karpenter/templates/webhook/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter-webhook
  namespace: karpenter
spec:
  ports:
    - port: 443
      targetPort: webhook
  selector:
    karpenter: webhook
---
# Source: karpenter/templates/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter-controller
  namespace: karpenter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      karpenter: controller
  template:
    metadata:
      labels:
        karpenter: controller
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: karpenter
      containers:
        - name: manager
          image: public.ecr.aws/karpenter/controller:v0.5.0@sha256:76fab69a5a2b1f5736c8beea349e60174d8903b26b65c4cc5009c6528f9aea72
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 1
              memory: 1Gi
          ports:
            - name: metrics
              containerPort: 8080
            - name: health-probe
              containerPort: 8081
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
      securityContext:
        fsGroup: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
              - key: karpenter.sh/provisioner-name
                operator: DoesNotExist
---
# Source: karpenter/templates/webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karpenter-webhook
  namespace: karpenter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      karpenter: webhook
  template:
    metadata:
      labels:
        karpenter: webhook
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: karpenter
      containers:
        - name: webhook
          image: public.ecr.aws/karpenter/webhook:v0.5.0@sha256:bc639160d55a15e1f9362a06d42e4133e692d3c81e96d87e2672bd9c53c98958
          resources:
            limits:
              cpu: 100m
              memory: 50Mi
            requests:
              cpu: 100m
              memory: 50Mi
          ports:
            - name: webhook
              containerPort: 8443
          livenessProbe:
            httpGet:
              scheme: HTTPS
              port: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              port: 8443
      securityContext:
        fsGroup: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
              - key: karpenter.sh/provisioner-name
                operator: DoesNotExist
---
# Source: karpenter/templates/webhook/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.provisioners.karpenter.sh
webhooks:
- admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter-webhook
      namespace: 'karpenter'
  failurePolicy: Fail
  sideEffects: None
  name: defaulting.webhook.provisioners.karpenter.sh
  rules:
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
      provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhook/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.provisioners.karpenter.sh
webhooks:
- admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter-webhook
      namespace: 'karpenter'
  failurePolicy: Fail
  sideEffects: None
  name: validation.webhook.provisioners.karpenter.sh
  rules:
  - apiGroups:
    - karpenter.sh
    apiVersions:
    - v1alpha5
    resources:
    - provisioners
      provisioners/status
    operations:
    - CREATE
    - UPDATE
---
# Source: karpenter/templates/webhook/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.config.karpenter.sh
webhooks:
- admissionReviewVersions: ["v1"]
  clientConfig:
    service:
      name: karpenter-webhook
      namespace: 'karpenter'
  failurePolicy: Fail
  sideEffects: None
  name: validation.webhook.config.karpenter.sh
  objectSelector:
    matchLabels:
      app.kubernetes.io/part-of: karpenter
